--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,3 +1,11 @@
 {
-    "volumio adapter settings": "Adaptereinstellungen für volumio"
+    "volumio adapter settings": "Adaptereinstellungen für volumio",
+    "Volumio Adapter Configuration": "Konfiguration des Volumio-Adapters",
+    "Volumino host address": "Volumino Hostadresse",
+    "Check connection to Volumio": "Verbindung zu Volumio überprüfen",
+    "Interval in s": "Prüfintervall in s",
+    "Volume steps": "Lautstärkeschritte",
+    "The adapter can be used in a event driven fashion. Volumio can notify via POST calls when state changes.\nThis is a much more efficient and elegant way to retrieve informations, instead of continuously polling the relevant information.": "Der Adapter kann ereignisgesteuert eingesetzt werden. Volumio kann über POST-Aufrufe benachrichtigen, wenn sich der Status ändert.\nDies ist eine viel effizientere und elegantere Möglichkeit, Informationen abzurufen, anstatt ständig die relevanten Informationen abzufragen.",
+    "Subscribe to player state changes": "Player Statusänderungen abonnieren",
+    "Subscription port": "Port für Abonnement"
 }
