--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,3 +1,11 @@
 {
-    "volumio adapter settings": "Ustawienia adaptera dla volumio"
+    "volumio adapter settings": "Ustawienia adaptera dla volumio",
+    "Volumio Adapter Configuration": "Konfiguracja adaptera Volumio",
+    "Volumino host address": "Adres hosta Volumino",
+    "Check connection to Volumio": "Sprawdź połączenie z Volumio",
+    "Interval in s": "Przerwa w s",
+    "Volume steps": "Stopnie głośności",
+    "The adapter can be used in a event driven fashion. Volumio can notify via POST calls when state changes.\nThis is a much more efficient and elegant way to retrieve informations, instead of continuously polling the relevant information.": "Adaptera można używać w sposób sterowany zdarzeniami. Volumio może powiadamiać za pomocą wywołań POST o zmianie stanu.\nJest to znacznie wydajniejszy i elegancki sposób wyszukiwania informacji, zamiast ciągłego odpytywania odpowiednich informacji.",
+    "Subscribe to player state changes": "Subskrybuj zmiany stanu gracza",
+    "Subscription port": "Port subskrypcji"
 }
