--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,3 +1,11 @@
 {
-    "volumio adapter settings": "Configurações do adaptador para volumio"
+    "volumio adapter settings": "Configurações do adaptador para volumio",
+    "Volumio Adapter Configuration": "Configuração do adaptador Volumio",
+    "Volumino host address": "Endereço de host do Volumino",
+    "Check connection to Volumio": "Verifique a conexão com o Volumio",
+    "Interval in s": "Intervalo em s",
+    "Volume steps": "Etapas de volume",
+    "The adapter can be used in a event driven fashion. Volumio can notify via POST calls when state changes.\nThis is a much more efficient and elegant way to retrieve informations, instead of continuously polling the relevant information.": "O adaptador pode ser usado de maneira orientada a eventos. Volumio pode notificar via chamadas POST quando o estado muda.\nEsta é uma forma muito mais eficiente e elegante de recuperar informações, em vez de pesquisar continuamente as informações relevantes.",
+    "Subscribe to player state changes": "Assine as mudanças de estado do jogador",
+    "Subscription port": "Porta de assinatura"
 }
